fixed mobile dark mode logo thing and changed the button in hero design

--- a/css/root.less
+++ b/css/root.less
@@ -189,6 +189,14 @@
     transition: 0.2s ease;
   }
 
+  .button-solid2 {
+    background-color: #10625e;
+    width: 180/18em;
+    &::before {
+      background: var(--primary);
+    }
+  }
+
   .button-transparent {
     display: inline-block;
     background: transparent;
